# full-stack-on-rust

./: README.md
01-workspaces/: README.md
01-workspaces/todo_api/: Cargo.toml
01-workspaces/todo_api/src/: main.rs
01-workspaces/todo_app/: Cargo.toml
01-workspaces/todo_frontend/: Cargo.toml
01-workspaces/todo_shared/: Cargo.toml
02-backend-webserver/: README.md
02-backend-webserver/todo_api/: Cargo.toml
02-backend-webserver/todo_api/src/: main.rs
02-backend-webserver/todo_shared/: Cargo.toml
03-rest-api/: README.md
03-rest-api/todo_api/: Cargo.toml
04-json-serialization/: README.md
04-json-serialization/todo_app/: Cargo.toml
04-json-serialization/todo_frontend/: Cargo.toml
04-json-serialization/todo_shared/: Cargo.toml
05-orm/: Cargo.toml  README.md
05-orm/todo_api/: .env  Cargo.toml
05-orm/todo_api/docker/postgresql/: docker-compose.yml
05-orm/todo_api/migrations/2022-09-23-122632_create_todos/: down.sql  up.sql
05-orm/todo_api/src/: main.rs  schema.rs
05-orm/todo_api/src/api/: mod.rs  todo_controller.rs
05-orm/todo_api/src/data/: db_context.rs  mod.rs  repository.rs  todo_repository.rs
05-orm/todo_api/src/entities/: mod.rs  todo_entity.rs  todo_item.rs
06-open-api-spec/: README.md
06-open-api-spec/todo_api/: Cargo.toml
06-open-api-spec/todo_shared/: Cargo.toml
06-open-api-spec/todo_shared/src/: lib.rs
06-open-api-spec/todo_shared/src/models/: todo_item.rs
07-containerization/: Api.DockerFile  README.md  docker-compose.yaml
07-containerization/todo_api/: Cargo.toml  DockerFile
(+18 files in other folders)
