[package]
name = "todo_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
todo_shared = { path = "../todo_shared" }
actix-web = "4"
diesel = { version = "2.0.0", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
diesel_migrations = "1.4.0"
r2d2 = "0.8.9"

